# neeko

./: .eslintrc.cjs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTEXT_CN.md  README.md  README_CN.md  REQUIREMENTS.md  TODO.md  cliff.toml  components.json  css_classes.txt  fix-imports.ps1  fix-imports2.ps1  fix-imports3.ps1  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reasonix.toml  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  LICENSE  LICENSE.rtf  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  app.rs  app_state.rs  error.rs  git.rs  git_worker.rs  lib.rs  logger.rs  main.rs  opencode_theme.rs  pi_theme.rs  project.rs  remote.rs  state.rs  storage.rs  task_runner.rs  terminal.rs  uri_scheme.rs  watcher.rs
src-tauri/src/agent/: commands.rs  commands_commit.rs  manager.rs  mod.rs  model.rs  types.rs
src-tauri/src/agent/services/: commit.rs
src-tauri/src/browser/: commands.rs  mod.rs  uri_scheme.rs
src-tauri/src/command/: local.rs  mod.rs  wsl.rs
src-tauri/src/commands/: agent.rs  ai_commit.rs  browser.rs  config.rs  file.rs  git.rs  git_unified.rs  ide.rs  mod.rs  opener.rs  project.rs  remote.rs  remote_git.rs  task.rs  terminal.rs  wsl.rs  wsl_git.rs
src-tauri/src/common/: db.rs  error.rs  logger.rs  mod.rs  runtime.rs  theme_types.rs  types.rs
src-tauri/src/common/agent/: mod.rs  model.rs  types.rs
src-tauri/src/common/connection/: mod.rs  model.rs  types.rs
src-tauri/src/common/executor/: factory.rs  local.rs  mod.rs  ssh.rs  ssh_auth.rs  sync.rs  wsl.rs
src-tauri/src/common/file/: mod.rs  services.rs  watcher.rs
src-tauri/src/common/git/: cache.rs  credential.rs  gh.rs  local.rs  mod.rs  model.rs  operations.rs  parsers.rs  pr.rs  provider.rs  remote.rs  status_worker.rs  transport.rs  types.rs  worker.rs  wsl.rs
src-tauri/src/common/terminal/: mod.rs  model.rs  remote.rs  types.rs
src-tauri/src/connection/: commands.rs  mod.rs  services.rs
src-tauri/src/conversation/: adapter.rs  commands.rs  disk_index.rs  manager.rs  mod.rs  normalize.rs  scan_cache.rs  scope.rs  types.rs
src-tauri/src/core/: db.rs  exec.rs  exec_env.rs  mod.rs  project.rs
src-tauri/src/dap/: cleanup.rs  client.rs  commands.rs  config.rs  discover.rs  manager.rs  mod.rs  plugin.rs  process.rs  protocol.rs  session.rs  transport.rs  types.rs
src-tauri/src/dap/adapter/: go.rs  (+2 more)
src-tauri/src/file/: commands.rs  mod.rs  services.rs  watcher.rs
src-tauri/src/git/: cache.rs  commands.rs  commands_remote.rs  commands_unified.rs  commands_wsl.rs  local.rs  mod.rs  model.rs  operations.rs  parsers.rs  pr.rs  remote.rs  transport.rs  worker.rs  wsl.rs
src-tauri/src/lsp/: commands.rs  diag_bus.rs  inflight.rs  installer.rs  manager.rs  mod.rs  plugin.rs  process.rs  profile.rs  server_request.rs  session.rs  symbol.rs  transport.rs  types.rs
src-tauri/src/models/: agent.rs  diff.rs  mod.rs  project.rs  session.rs  terminal.rs
src-tauri/src/project/: commands.rs  commands_ide.rs  mod.rs  model.rs  types.rs
src-tauri/src/session/: commands.rs  manager.rs  mod.rs  model.rs  types.rs
src-tauri/src/settings/: commands.rs  mod.rs
src-tauri/src/skill/: central_repo.rs  commands.rs  content_hash.rs  git_fetcher.rs  installer.rs  migrations.rs  mod.rs  model.rs  repository.rs  scanner.rs  skill_metadata.rs  skill_store.rs  skillssh_api.rs  sync_engine.rs  tool_adapters.rs  types.rs
src-tauri/src/state/: agent.rs  mod.rs  project.rs  session.rs  terminal.rs
src-tauri/src/task/: commands.rs  mod.rs  services.rs
src-tauri/src/terminal/: commands.rs  mod.rs  model.rs  remote.rs  services.rs
src-tauri/src/theme/: commands.rs  common.rs  custom.rs  mod.rs  opencode.rs  pi.rs  service.rs
src-tauri/src/utils/: fonts.rs  job_object.rs  mod.rs
src-tauri/src/workspace/: commands.rs  commands_ai_commit.rs  commands_config.rs  commands_file.rs  commands_opener.rs  mod.rs  session.rs  types.rs  watcher.rs
src-tauri/tests/: unit.rs
src-tauri/tests/unit/: agent_test.rs  git_test.rs  project_test.rs  state_test.rs  storage_test.rs
(+1919 files in other folders)
