[package]
name = "neeko"
version = "1.0.4"
edition = "2021"

[lib]
name = "neeko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
git2 = "0.18"
portable-pty = "0.8"
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
dirs = "5.0"
log = "0.4"
russh = "0.50.0-beta.7"
russh-keys = "0.50.0-beta.7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_yaml = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
