[package]
name = "neeko"
version = "1.0.4"
edition = "2021"

[lib]
name = "neeko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "unstable"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
git2 = "0.20.4"
portable-pty = "0.8"
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
dirs = "5.0"
log = "0.4"
russh = "0.50.0-beta.7"
russh-keys = "0.50.0-beta.7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_yaml = "0.9"
walkdir = "2"
zip = "2"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
thiserror = "2"
which = "8.0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1"
urlencoding = "2"
base64 = "0.22"
url = "2"
arboard = "3.6.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
