[package]
name = "neeko"
version = "1.0.4"
edition = "2021"

[lib]
name = "neeko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "unstable"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
git2 = "0.20.4"
portable-pty = "0.8"
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6", features = ["macos_fsevent"] }
dirs = "5.0"
log = "0.4"
russh = "0.50.0-beta.7"
russh-keys = "0.50.0-beta.7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_yaml = "0.9"
walkdir = "2"
zip = "2"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
thiserror = "2"
which = "8.0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1"
urlencoding = "2"
base64 = "0.22"
url = "2"
arboard = "3.6.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.clippy]
# --- 正确性（Phase 4 会将 unwrap_used 升级为 deny）---
unwrap_used = "warn"
expect_used = "warn"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "deny"
# --- 模块可见性 ---
wildcard_imports = "deny"
module_inception = "deny"
needless_pass_by_ref_mut = "deny"
# --- 代码质量 ---
must_use_candidate = "warn"
missing_const_for_fn = "warn"
semicolon_if_nothing_returned = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
unused_self = "deny"
enum_glob_use = "deny"
fallible_impl_from = "deny"
large_enum_variant = "warn"
cast_lossless = "warn"
manual_string_new = "warn"
unnecessary_wraps = "warn"
redundant_else = "warn"

[lints.rust]
missing_docs = "warn"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_IO",
] }
